--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,18 @@
-#XCode
-*.pbxuser
-*.perspective
-*.perspectivev3
-*.mode1v3
-*.mode2v3
-#XCode 4
-xcuserdata
-*.xcworkspace
 
-#OSX
-.DS_Store
-*.swp
-*~.nib
-# Thumbnails
-._*
+# win
+*.exe
 
-[Bb]uild/
-[Oo]bj/
-*.o
-[Dd]ebug*/
-[Rr]elease*/
-*.mode*
-*.app/
+# visual studio
+*.exp
+*.ilk
+*.pdb
+*.sdf
+*.v11.suo
+*.dll
+*.lib
 
-.DS_Store
+# examples
+example_basic/obj/*
+example_opencv/obj/*
+example_basic/bin/data/*
+example_opencv/bin/data/*
